--- a/students_mgmt/src/main/resources/templates/template.html
+++ b/students_mgmt/src/main/resources/templates/template.html
@@ -2,6 +2,7 @@
 <html lang="en"
       xmlns:th="http://www.thymeleaf.org"
       xmlns:layout="http://www.ultraq.net.nz/thymeleaf/layout"
+      xmlns:sec="http://www.thymeleaf.org/extras/spring-security"
 >
 <head>
     <meta charset="UTF-8">
@@ -27,20 +28,20 @@
                         Students
                     </a>
                     <ul class="dropdown-menu" aria-labelledby="students_dropdown">
-                        <li><a class="dropdown-item" href="#">Add new student</a></li>
+                        <li><a class="dropdown-item" th:href="@{/new_student}">Add new student</a></li>
                         <li><a class="dropdown-item" th:href="@{/students}">Search</a></li>
                     </ul>
                 </li>
             </ul>
         </div>
         <ul class="navbar-nav">
-            <li class="nav-item dropdown">
+            <li sec:authorize="isAuthenticated()" class="nav-item dropdown">
                 <a class="nav-link dropdown-toggle" href="#" id="user_dropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">
-                    [USERNAME]
+                    <span sec:authentication="name"></span>
                 </a>
                 <ul class="dropdown-menu" aria-labelledby="user_dropdown">
                     <li><a class="dropdown-item" href="#">My Profile</a></li>
-                    <li><a class="dropdown-item" href="#">Logout</a></li>
+                    <li><a class="dropdown-item" th:href="@{/logout}">Logout</a></li>
                 </ul>
             </li>
         </ul>
