--- a/Digital Banking/FrontEnd/src/app/new-customer/new-customer.component.html
+++ b/Digital Banking/FrontEnd/src/app/new-customer/new-customer.component.html
@@ -1,6 +1,6 @@
 <div class="container mt-2">
     <div class="card col-md-6 offset-3 mt-3">
-      <div class="card-header">New Customer</div>
+      <div class="card-header">New CustomerModel</div>
       <div class="card-body">
         <form [formGroup]="newCustomerForm" (ngSubmit)="handleNewCustomer()">
           <div class="mb-3">
