--- a/Digital Banking/FrontEnd/src/app/accounts/accounts.component.html
+++ b/Digital Banking/FrontEnd/src/app/accounts/accounts.component.html
@@ -1,1 +1,98 @@
-<p>accounts works!</p>
+<div class="container mt-2">
+  <div class="row">
+    <div class="col col-md-6">
+      <div class="card">
+        <div class="card-header">Accounts</div>
+        <div class="card-body">
+          <form [formGroup]="searchGroupForm" (ngSubmit)="handleSearchAccounts()">
+            <div class="input-group">
+              <label class="input-group-text">Account id :</label>
+              <input type="text" class="form-control" formControlName="accountId">
+              <button class="btn btn-outline-info">
+                <i class="bi bi-search"></i>Search
+              </button>
+            </div>
+          </form>
+          <ng-container *ngIf="accountObservable | async as accountDetails">
+            <div class="mb-3">
+              <label>Account Id : </label>
+              <label><strong>{{accountDetails.accountId}}</strong></label>
+            </div>
+            <div class="mb-3">
+              <label>Balance : </label>
+              <label><strong>{{accountDetails.balance | number : '1.2-2'}}</strong></label>
+            </div>
+            <table class="table table-hover">
+              <thead>
+              <tr>
+                <th scope="col">ID</th>
+                <th scope="col">Date</th>
+                <th scope="col">Type</th>
+                <th scope="col">Montant</th>
+              </tr>
+              </thead>
+              <tbody>
+              <tr *ngFor="let op of accountDetails.accountOperationDTOS">
+                <th scope="row">{{op.id}}</th>
+                <td>{{op.operationDate | date : 'dd/MM/yyyy'}}</td>
+                <td>{{op.type}}</td>
+                <td>{{op.amount}}</td>
+              </tr>
+              </tbody>
+            </table>
+            <ul class="nav nav-pills">
+              <li *ngFor="let item of [].constructor(accountDetails.totalPages); let page=index">
+                <a [ngClass]="page==currentPage?'btn-dark':'btn-outline-dark'" class="btn" (click)="goToPage(page)">{{page}}</a>
+              </li>
+            </ul>
+          </ng-container>
+        </div>
+      </div>
+    </div>
+    <div class="col col-md-6">
+      <div class="card" *ngIf="accountObservable">
+        <div class="card-header">Operations</div>
+        <div class="card-body">
+          <div *ngIf="isAdmin()">
+          <form [formGroup]="operationGroupForm" method="post" (ngSubmit)="handleOperations()">
+            <div class="form-check form-check-inline">
+              <input class="form-check-input" type="radio" formControlName="operationType" value="DEBIT">
+              <label class="form-check-label">DEBIT</label>
+            </div>
+
+            <div class="form-check form-check-inline">
+              <input class="form-check-input" type="radio" formControlName="operationType" value="CREDIT">
+              <label class="form-check-label">CREDIT</label>
+            </div>
+
+            <div class="form-check form-check-inline">
+              <input class="form-check-input" type="radio" formControlName="operationType" value="TRANSFER">
+              <label class="form-check-label">TRANSFER</label>
+            </div>
+
+            <div class="mb-3" *ngIf="operationGroupForm.value.operationType=='TRANSFER'">
+              <label class="form-label">Account Destination : </label>
+              <input type="text" class="form-control" formControlName="accountDest">
+            </div>
+
+            <div class="mb-3">
+              <label class="form-label">Amount : </label>
+              <input type="text" class="form-control" formControlName="amount">
+            </div>
+
+            <div class="mb-3">
+              <label class="form-label">Description</label>
+              <input type="text" class="form-control" formControlName="description">
+            </div>
+
+            <div class="d-grid">
+              <button class="btn btn-outline-success">Save</button>
+            </div>
+          </form>
+        </div>
+        </div>
+      </div>
+    </div>
+  </div>
+
+</div>
